# docs/swagger.yaml
@@ -10,6 +10,28 @@ definitions:
       updatedAt:
         type: integer
     type: object
+  database.CreateLevelRow:
+    properties:
+      createdAt:
+        type: integer
+      id:
+        type: string
+      name:
+        type: string
+      updatedAt:
+        type: integer
+    type: object
+  database.GetProfileRow:
+    properties:
+      avatar:
+        type: string
+      createdAt:
+        type: integer
+      updatedAt:
+        type: integer
+      username:
+        type: string
+    type: object
   database.ListCellTexturesRow:
     properties:
       createdAt:
@@ -17,6 +39,17 @@ definitions:
       displayName:
         type: string
       key:
+        type: string
+      updatedAt:
+        type: integer
+    type: object
+  database.ListLevelsRow:
+    properties:
+      createdAt:
+        type: integer
+      id:
+        type: string
+      name:
         type: string
       updatedAt:
         type: integer
@@ -38,6 +71,8 @@ definitions:
         type: integer
       r:
         type: integer
+      texture:
+        type: string
       weight:
         description: 0 = non-traversable
         type: integer
@@ -61,23 +96,12 @@ definitions:
       name:
         type: string
     type: object
-  handlers.UpsertedProfile:
+  router.CreateLevelRequest:
     properties:
-      avatar:
+      level:
+        $ref: '#/definitions/grid.SerializedGrid'
+      name:
         type: string
-      username:
-        type: string
-    type: object
-  services.FileMetadata:
-    properties:
-      contentType:
-        type: string
-      createdAt:
-        type: string
-      key:
-        type: string
-      size:
-        type: integer
     type: object
 info:
   contact: {}
@@ -283,85 +307,77 @@ paths:
       tags:
       - Cell Textures
   /api/levels:
-    post:
+    get:
       consumes:
       - application/json
-      description: Create a new level.
-      parameters:
-      - description: Level details
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/grid.SerializedGrid'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Newly created level file
-          schema:
-            $ref: '#/definitions/services.FileMetadata'
-        "400":
-          description: Bad request
-          schema:
-            type: string
-        "500":
-          description: Server error
-          schema:
-            type: string
-      summary: Create level
-      tags:
-      - Level
-  /api/levels/{levelId}:
-    delete:
-      description: Delete level file.
-      parameters:
-      - description: Level ID
-        in: path
-        name: levelId
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: Level deleted successfully
-        "400":
-          description: Bad request
-          schema:
-            type: string
-        "404":
-          description: Level not found
-          schema:
-            type: string
-        "500":
-          description: Server error
-          schema:
-            type: string
-      summary: Delete level
-      tags:
-      - Level
-    get:
-      description: Get level file.
-      parameters:
-      - description: Level ID
-        in: path
-        name: levelId
-        required: true
-        type: string
+      description: List all levels for the authenticated user.
       produces:
       - application/json
       responses:
         "200":
-          description: Level file
+          description: OK
           schema:
-            $ref: '#/definitions/grid.SerializedGrid'
+            items:
+              $ref: '#/definitions/database.ListLevelsRow'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Server error
+          schema:
+            type: string
+      summary: List levels
+      tags:
+      - Levels
+    post:
+      consumes:
+      - application/json
+      description: Create a new level for the authenticated user.
+      parameters:
+      - description: Level data
+        in: body
+        name: level
+        required: true
+        schema:
+          $ref: '#/definitions/router.CreateLevelRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/database.CreateLevelRow'
         "400":
           description: Bad request
           schema:
             type: string
-        "404":
-          description: Level not found
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Server error
+          schema:
+            type: string
+      summary: Create a level
+      tags:
+      - Levels
+  /api/levels/{levelId}:
+    get:
+      consumes:
+      - application/json
+      description: Get a specific level for the authenticated user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/grid.SerializedGrid'
+        "401":
+          description: Unauthorized
           schema:
             type: string
         "500":
@@ -370,19 +386,43 @@ paths:
             type: string
       summary: Get level
       tags:
-      - Level
+      - Levels
   /api/profiles/me:
+    get:
+      description: Get the profile for the authenticated user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/database.GetProfileRow'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not found
+          schema:
+            type: string
+        "500":
+          description: Server error
+          schema:
+            type: string
+      summary: Get user's profile
+      tags:
+      - Profiles
     put:
       consumes:
-      - application/json
+      - text/plain
       description: Create or replace the profile for the authenticated user.
       parameters:
-      - description: Profile data
-        in: body
-        name: profile
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.UpsertedProfile'
+      - in: formData
+        name: avatar
+        type: string
+      - in: formData
+        name: username
+        type: string
       produces:
       - application/json
       responses:
@@ -402,7 +442,7 @@ paths:
           description: Server error
           schema:
             type: string
-      summary: Create or replace profile
+      summary: Create or replace user's profile
       tags:
       - Profiles
 swagger: "2.0"
